[gd_scene load_steps=7 format=3 uid="uid://cu8j7xbaxo1f6"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_wvd2u"]
[ext_resource type="Texture2D" uid="uid://l4gauitsc1us" path="res://assets/player_sprites/player.png" id="2_8fetl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vc2im"]
height = 34.0

[sub_resource type="Animation" id="Animation_7sani"]
resource_name = "engine"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 0.241484, 1, 1),
"update": 0,
"values": [Vector2(0, -15), Vector2(0, -14), Vector2(0, -15), Vector2(0, -14)]
}

[sub_resource type="Animation" id="Animation_tmp8v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hebc6"]
_data = {
"RESET": SubResource("Animation_tmp8v"),
"engine": SubResource("Animation_7sani")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 2
script = ExtResource("1_wvd2u")
gravity = 20
jump_force = 400

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -15)
texture = ExtResource("2_8fetl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_vc2im")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -28)
position_smoothing_enabled = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpHeightTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hebc6")
}
autoplay = "engine"

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="JumpHeightTimer" to="." method="_on_jump_height_timer_timeout"]
